Page MenuHome GnuPG

Single thread support with newer GNU C library (2.34 or later)
Closed, ResolvedPublic

Description

I just noticed that in newer GNU C library, our method to detect if an application is single threaded or not doesn't work (not supported) any more.

Applications should check the __libc_single_threaded variable declared in <sys/single_threaded.h> instead.

We need to fix our implementation.

Event Timeline

gniibe added a project: libgcrypt.
gniibe updated the task description. (Show Details)
gniibe renamed this task from Single thread support with newer GNU C library (2.32 or later) to Single thread support with newer GNU C library (2.34 or later).Aug 6 2021, 9:19 AM
gniibe claimed this task.
gniibe triaged this task as Normal priority.
gniibe added a project: Restricted Project.
gniibe removed a project: Restricted Project.

Added a test, and tested with glibc 2.32 by manual editing config.h for USE_POSIX_THREADS_FROM_LIBC.
Works correctly.