posix-lock: Support GNU C library 2.34 or later.

* configure.ac: Add check for sys/single_threaded.h.
* src/posix-lock.c [USE_POSIX_THREADS_FROM_LIBC]: Use
__libc_single_threaded to detect if it's single threaded.

--

GnuPG-bug-id: 5547
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>